--- a/examples/api_usage.ipynb
+++ b/examples/api_usage.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AI Tutors API Usage Tutorial\n",
+    "\n",
+    "This notebook demonstrates how to use the AI Tutors API to create interactive educational experiences. You'll learn how to:\n",
+    "\n",
+    "1. Initialize an AI Tutor\n",
+    "2. Send messages and receive responses\n",
+    "3. Manage conversations\n",
+    "4. Access conversation history and tutor information\n",
+    "\n",
+    "## Setting Up Your AI Tutor\n",
+    "\n",
+    "First, we'll import the AITutor class and initialize it with an access code. You can get your access code by creating a tutor in the AI Tutors app."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -29,8 +47,18 @@
    "source": [
     "from ai_tutors import AITutor\n",
     "\n",
-    "# Create an instance of AITutor with the access code created in the app\n",
-    "ai_tutor = AITutor(access_code=\"K1YSDM\", base_url=None)#'http://localhost:8000')"
+    "# Create an instance of AITutor with your access code\n",
+    "# The access code connects to the specific tutor you've created in the app\n",
+    "ai_tutor = AITutor(access_code=\"K1YSDM\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sending Messages and Getting Responses\n",
+    "\n",
+    "Now that we have our tutor set up, we can send a message and get a response. The AI tutor will respond based on its role and instructions."
    ]
   },
   {
@@ -79,112 +107,15 @@
     }
    ],
    "source": [
-    "# Get the first response\n",
+    "# Send a message to the AI tutor and get a response\n",
     "response = ai_tutor.get_response(\"I'm working on solving two-step linear equations. Can you help me?\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "\n",
-       "**Student:** "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm working on solving two-step linear equations. Can you help me?\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "\n",
-       "**AI Tutor:**\n",
-       "\n",
-       "I can totally help with that! Two-step equations are all about undoing operations to isolate the variable 🤓\n",
-       "\n",
-       "Think of it like peeling an onion 🧅. To get to the center, you need to remove each layer one by one. In a two-step equation, you'll need to undo the addition or subtraction first, and then undo the multiplication or division.\n",
-       "\n",
-       "For example, let's say you have the equation $2x + 3 = 7$. What do you think the first step would be to isolate $x$? 🤔"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "# Get the first response\n",
-    "response = ai_tutor.get_response(\"I'm working on solving two-step linear equations. Can you help me?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "\n",
-       "**Student:** "
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I'm working on solving two-step linear equations. Can you help me?\n"
-     ]
-    },
-    {
-     "data": {
-      "text/markdown": [
-       "\n",
-       "\n",
-       "**AI Tutor:**\n",
-       "\n",
-       "I can totally help with that! Two-step equations are all about undoing operations to isolate the variable 🤓\n",
-       "\n",
-       "Think of it like peeling an onion 🧅. To get to the center, you need to remove each layer one by one. In a two-step equation, you'll need to undo the addition or subtraction first, and then undo the multiplication or division.\n",
-       "\n",
-       "For example, let's say you have the equation $2x + 3 = 7$. What do you think the first step would be to isolate $x$? 🤔"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Markdown object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Get the first response\n",
-    "response = ai_tutor.get_response(\"I'm working on solving two-step linear equations. Can you help me?\")"
+    "### Example of Conversation Flow"
    ]
   },
   {
@@ -233,7 +164,17 @@
     }
    ],
    "source": [
+    "# You can call get_response multiple times to continue the conversation\n",
     "response = ai_tutor.get_response(\"Get rid of the 2 from the left side.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resetting a Conversation\n",
+    "\n",
+    "If you want to start a new conversation, you can reset the chat. This clears the message history and starts fresh with the initial greeting from the tutor."
    ]
   },
   {
@@ -263,7 +204,17 @@
     }
    ],
    "source": [
+    "# Reset the chat to start a new conversation\n",
     "ai_tutor.reset_chat()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Starting a New Topic\n",
+    "\n",
+    "After resetting, we can start a completely new conversation on a different topic. The AI will not retain any memory of the previous conversation about linear equations."
    ]
   },
   {
@@ -314,7 +265,17 @@
     }
    ],
    "source": [
+    "# Start a new conversation on a completely different topic\n",
     "response = ai_tutor.get_response(\"Can you help me with understanding photosynthesis?\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accessing Conversation History\n",
+    "\n",
+    "You can access the full conversation history as a list of message objects. This includes system messages (which define the tutor's behavior), user messages, and assistant (tutor) responses."
    ]
   },
   {
@@ -341,7 +302,17 @@
     }
    ],
    "source": [
+    "# Access the full conversation history\n",
     "ai_tutor.message_history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Displaying Tutor Information\n",
+    "\n",
+    "You can display information about the tutor, including its name, description, and availability status. This is useful for understanding the tutor's capabilities and intended purpose."
    ]
   },
   {
