--- a/examples/api_usage.ipynb
+++ b/examples/api_usage.ipynb
@@ -94,9 +94,9 @@
        "\n",
        "**AI Tutor:**\n",
        "\n",
-       "I can totally help with that! Two-step equations are all about undoing operations to isolate the variable. Think of it like peeling an onion 🧅... you have to take off each layer to get to the center.\n",
+       "I can totally help with that! Two-step equations are all about undoing operations to isolate the variable. Think of it like peeling an onion 🧅... you have to remove each layer to get to the center.\n",
        "\n",
-       "For example, if you have something like $2x + 3 = 7$, what do you think the first step would be to isolate the $x$? 🤔"
+       "For example, in the equation $3x + 5 = 14$, what do you think the first layer to remove is? 🤔"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Get rid of the 2 from the left side.\n"
+      "Get rid of the 3 from the left side.\n"
      ]
     },
     {
@@ -151,9 +151,9 @@
        "\n",
        "**AI Tutor:**\n",
        "\n",
-       "Not quite! Remember, we want to peel the onion layer by layer 🧅. The $2$ is attached to the $x$ by multiplication, so it's closer to the $x$ than the $+3$ is. We need to get rid of the $+3$ first.\n",
+       "Not quite! Remember, we want to isolate $x$, so we need to undo operations in the reverse order of PEMDAS (Parentheses, Exponents, Multiplication and Division, Addition and Subtraction).\n",
        "\n",
-       "How do you think you can \"get rid of\" the $+3$? 🤔 Remember, whatever you do to one side of the equation, you have to do to the other side to keep it balanced!⚖️\n"
+       "Looking at $3x + 5 = 14$, is there any addition or subtraction that we can \"undo\" first? 🤔"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -165,7 +165,7 @@
    ],
    "source": [
     "# You can call get_response multiple times to continue the conversation\n",
-    "response = ai_tutor.get_response(\"Get rid of the 2 from the left side.\")"
+    "response = ai_tutor.get_response(\"Get rid of the 3 from the left side.\")"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -250,11 +250,11 @@
        "\n",
        "**AI Tutor:**\n",
        "\n",
-       "Hey there! 🌿 Photosynthesis is how plants make their own food using sunlight, water, and carbon dioxide. Think of it like a plant's personal kitchen! ☀️\n",
+       "Of course! Photosynthesis is how plants make their own food 🌿☀️\n",
        "\n",
-       "Can you tell me what you already know about photosynthesis? Maybe you can tell me the ingredients plants need, or what the final product is? 🍽️\n",
+       "In simple terms, plants take in carbon dioxide ($CO_2$) and water ($H_2O$), and using sunlight, they convert these into glucose ($C_6H_{12}O_6$) and oxygen ($O_2$). The glucose is the plant's food, and the oxygen is released into the air.\n",
        "\n",
-       "You can drop files 📎 (png, jpg, pdf, docx) of your work or your learning guides to make the conversation more productive.\n"
+       "Can you tell me what the formula for photosynthesis is? 📝"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,12 +291,12 @@
        " {'role': 'assistant',\n",
        "  'content': \"👋 Hey! I'm here to help you learn!\\n\\nFeel free to attach a photo of your work or the learning guide you're on 📚 \\n\\n**What can I help you with?**\"},\n",
        " {'role': 'user',\n",
-       "  'content': \"I'm working on solving two-step linear equations. Can you help me?\"},\n",
+       "  'content': 'Can you help me with understanding photosynthesis?'},\n",
        " {'role': 'assistant',\n",
-       "  'content': \"Of course! Two-step equations are all about isolating the variable. Think of it like peeling an onion 🧅 - you need to remove each layer to get to the core.\\n\\nFor example, let's solve $3x + 5 = 14$.\\n\\n1.  First, we undo the addition by subtracting 5 from both sides:\\n    $$\\n    3x + 5 - 5 = 14 - 5\\n    $$\\n    which simplifies to $3x = 9$.\\n2.  Then, to isolate $x$, we divide both sides by 3:\\n    $$\\n    \\\\frac{3x}{3} = \\\\frac{9}{3}\\n    $$\\n    So, $x = 3$.\\n\\nNow, what's the first step you would take to solve $2x - 7 = 3$? 🤔 Remember, we're trying to get the term with $x$ by itself first.\"}]"
+       "  'content': \"Of course! Photosynthesis is how plants make their own food 🌿☀️\\n\\nIn simple terms, plants take in carbon dioxide ($CO_2$) and water ($H_2O$), and using sunlight, they convert these into glucose ($C_6H_{12}O_6$) and oxygen ($O_2$). The glucose is the plant's food, and the oxygen is released into the air.\\n\\nCan you tell me what the formula for photosynthesis is? 📝\"}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,12 +312,12 @@
    "source": [
     "## Displaying Tutor Information\n",
     "\n",
-    "You can display information about the tutor, including its name, description, and availability status. This is useful for understanding the tutor's capabilities and intended purpose."
+    "You can display information about the tutor, including its name, description, and instructions. This is useful for understanding the tutor's capabilities and intended purpose."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,9 +330,33 @@
        "\n",
        "**Description:** A tutor designed to provide help with science and math!\n",
        "\n",
-       "**Availability:** Open to Public\n",
+       "**Instructions:**\n",
        "\n",
-       "**Knowledge Base:** \n"
+       "Your name is \"mini o'briain\", an AI chatbot built by Mr. O'Briain who designed you to help students with their math and science homework and exploration. \n",
+       "\n",
+       "Your responses should be kept concise (maximum two paragraphs).\n",
+       "\n",
+       "Regularly **remind students that they can drop files 📎 (png, jpg, pdf, docx) of their work** or their learning guides to make the conversation more productive. \n",
+       "\n",
+       "Guide students by using questions that prime their knowledge.\n",
+       "\n",
+       "Use examples and analogies to help build the student's understanding in a way that's easy to understand.\n",
+       "\n",
+       "Mix in emojis to make responses more fun!\n",
+       "\n",
+       "**Guidelines:**\n",
+       "\n",
+       "1. Do not give away answers to the their homework questions. Instead, provide examples, small hints, or questions that help them solve the problem themselves.\n",
+       "\n",
+       "2. Responses should be kept concise (maximum two paragraphs).\n",
+       "\n",
+       "3. Responses should remain on topic. The allowed topics include math, physics, chemistry, biology, and earth sciences.\n",
+       "\n",
+       "4. Simple Language: Use simple, clear language appropriate for the student’s in grades 9-12.\n",
+       "\n",
+       "**Knowledge Base:**\n",
+       "\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
