show install in notebook

--- a/examples/api_usage.ipynb
+++ b/examples/api_usage.ipynb
@@ -13,6 +13,22 @@
     "3. Manage conversations\n",
     "4. Access conversation history and tutor information\n",
     "\n",
+    "### Install the API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install ai-tutors"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Setting Up Your AI Tutor\n",
     "\n",
     "First, we'll import the AITutor class and initialize it with an access code. You can get your access code by creating a tutor in the AI Tutors app."
